# asynq

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  crates.js  help.html  search-index.js  settings.html  src-files.js
asynq/: Cargo.toml  README.md  all.html  build.rs  index.html  sidebar-items.js
asynq-macros/: Cargo.toml  README.md
asynq-macros/src/: lib.rs
asynq-server/: Cargo.toml  README.md
asynq-server/examples/: multi_tenant_server.rs  websocket_server.rs
asynq-server/src/: api.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs  message.rs  server.rs
asynq-server/src/ui/: actions.rs  helpers.rs  mod.rs  styles.rs
asynq/backend/: enum.RedisConnectionType.html  index.html  sidebar-items.js  struct.RedisBroker.html  struct.RedisInspector.html  type.Broker.html  type.Inspector.html
asynq/backend/option/: enum.OptionType.html  enum.OptionTypeParseError.html  enum.RateLimitType.html  enum.RetryPolicy.html  index.html  sidebar-items.js  struct.RateLimit.html  struct.TaskOptions.html
asynq/backend/pagination/: index.html  struct.Pagination.html
asynq/base/: enum.ServerState.html  index.html  sidebar-items.js  trait.Broker.html  trait.SchedulerBroker.html
asynq/base/constants/: constant.DEFAULT_ARCHIVED_EXPIRATION_IN_DAYS.html  constant.DEFAULT_MAX_ARCHIVE_SIZE.html  constant.DEFAULT_MAX_RETRY.html  constant.DEFAULT_QUEUE_NAME.html  constant.DEFAULT_TIMEOUT.html  constant.TIME_LAYOUT_YMD.html  constant.VERSION.html  index.html  sidebar-items.js
asynq/base/keys/: constant.ACTIVE_PREFIX.html  constant.AGGREGATING_PREFIX.html  constant.ALL_QUEUES.html  constant.ALL_SCHEDULERS.html  constant.ALL_SERVERS.html  constant.ALL_WORKERS.html  constant.ARCHIVED_PREFIX.html  constant.CANCEL_CHANNEL.html  constant.COMPLETED_PREFIX.html  constant.PAUSED_QUEUES.html  constant.QUEUE_END.html  constant.QUEUE_PREFIX.html  constant.QUEUE_START.html  constant.RETRY_PREFIX.html  constant.SCHEDULED_PREFIX.html  constant.SCHEDULER_EVENTS.html  constant.SERVERS_PREFIX.html  constant.TASK_RESULT_PREFIX.html  constant.UNIQUE_PREFIX.html  constant.WORKERS_PREFIX.html  enum.TaskState.html  fn.active_key.html  fn.aggregating_key.html  fn.aggregation_set_key.html  fn.all_aggregation_sets.html  fn.all_groups.html  fn.archived_key.html  fn.completed_key.html  fn.failed_key.html  fn.failed_total_key.html  fn.group_key.html  fn.group_key_prefix.html  fn.groups_key.html  fn.lease_key.html  fn.paused_key.html  fn.pending_key.html  fn.processed_key.html  fn.processed_total_key.html  fn.queue_key_prefix.html  fn.retry_key.html  (+19 more)
asynq/client/: index.html  struct.Client.html
asynq/components/: index.html  sidebar-items.js  trait.ComponentLifecycle.html
asynq/components/aggregator/: index.html  sidebar-items.js  struct.Aggregator.html  struct.AggregatorConfig.html  struct.GroupAggregatorFunc.html  trait.GroupAggregator.html
asynq/components/forwarder/: index.html  sidebar-items.js  struct.Forwarder.html  struct.ForwarderConfig.html
asynq/components/healthcheck/: index.html  sidebar-items.js  struct.Healthcheck.html  struct.HealthcheckConfig.html  type.HealthcheckFunc.html
asynq/components/heartbeat/: enum.WorkerEvent.html  index.html  sidebar-items.js  struct.Heartbeat.html  struct.HeartbeatMeta.html  (+2 more)
asynq/config/: fn.default_retry_delay.html  index.html  sidebar-items.js  struct.ClientConfig.html  struct.ServerConfig.html  type.ErrorHandlerFunc.html  type.HealthCheckFunc.html  type.RetryDelayFunc.html
asynq/error/: enum.Error.html  index.html  sidebar-items.js  struct.RevokeTaskError.html  struct.SkipRetryError.html  type.Result.html
asynq/examples/: acl_example.rs  admin_multi_tenant_scheduler.rs  cancel_tasks.rs  cancellation_example.rs  cluster_pubsub_example.rs  components_example.rs  consumer.rs  dynamic_periodic_task_registration.rs  enqueue_long_tasks.rs  group_aggregator_example.rs  group_task_producer.rs  inspector_demo.rs  macro_example.rs  pattern_matching_example.rs  periodic_task_manager_example.rs  periodic_task_manager_register.rs  postgres_consumer.rs  postgres_producer.rs  postgres_scheduler_example.rs  processor_example.rs  producer.rs  result_writer_example.rs  result_writer_producer.rs  scheduler_example.rs  scheduler_with_options.rs  sentinel_example.rs  servemux_example.rs  server_with_cancellation.rs  tenant_configuration_example.rs  tls_redis_example.rs  websocket_consumer.rs  websocket_producer.rs
asynq/inspector/: index.html  sidebar-items.js  struct.Inspector.html  trait.InspectorTrait.html
asynq/proto/: asynq.proto  index.html  sidebar-items.js  struct.SchedulerEnqueueEvent.html  struct.SchedulerEntry.html  struct.ServerInfo.html  struct.TaskMessage.html  struct.WorkerInfo.html
asynq/rdb/: index.html  sidebar-items.js
asynq/redis/: enum.RedisConnection.html  enum.RedisConnectionConfig.html  enum.RedisConnectionType.html  index.html  sidebar-items.js
asynq/scheduler/: index.html  sidebar-items.js  struct.PeriodicTask.html  struct.Scheduler.html
asynq/serve_mux/: index.html  sidebar-items.js  struct.ServeMux.html
asynq/server/: index.html  sidebar-items.js  struct.AsyncHandlerFunc.html  struct.HandlerFunc.html  struct.Server.html  struct.ServerBuilder.html  trait.Handler.html
asynq/src/: client.rs  config.rs  error.rs  inspector.rs  lib.rs  redis.rs  scheduler.rs  serve_mux.rs  server.rs  task.rs
asynq/task/: fn.generate_task_id.html  fn.generate_unique_key.html  index.html  sidebar-items.js  struct.DailyStats.html  struct.QueueInfo.html  struct.QueueStats.html  struct.ResultWriter.html  struct.Task.html  struct.TaskInfo.html  trait.IntoHeaders.html  trait.PayloadCodec.html  trait.ToHashMap.html  type.HeaderMap.html
asynq/tests/: test_client_comprehensive.rs  test_go_compatibility.rs  test_lifecycle_trait.rs  test_message_compatibility.rs  test_periodic_task_manager_config.rs  test_postgres_server_registration.rs  test_redis_broker.rs  test_redis_verification.rs  test_scheduler.rs  test_server_dynamic_periodic_tasks.rs  test_server_registration.rs  test_with_concurrency.rs
src/: client.rs  (+8 more)
(+774 files in other folders)
