[workspace]
resolver = "2"
members = [
    "asynq",
    "asynq-macros"
]
[workspace.package]
homepage = "https://github.com/emo-crab/asynq"
repository = "https://github.com/emo-crab/asynq"
license = "MIT OR GPL-3.0"
edition = "2021"
authors = ["Kali-Team <root@kali-team.cn>"]

#https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[profile.dev]
debug = 0
[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[patch.crates-io]
asynq-macros = { path = "asynq-macros" }
asynq = { path = "asynq" }