[package]
name = "asynq-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kali-Team <root@kali-team.cn>"]
description = "Procedural macros for asynq task handler registration"
readme = "README.md"
repository = "https://github.com/emo-crab/asynq"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
paste = "1.0"

[dev-dependencies]
