[package]
name = "asynq-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
description = "Standalone asynq server with WebSocket API for cross-process task queue communication"
readme = "README.md"
homepage = "https://github.com/emo-crab/asynq"
repository = "https://github.com/emo-crab/asynq"
keywords = ["async", "task-queue", "websocket", "server"]
categories = ["asynchronous", "web-programming", "network-programming"]

[lib]
name = "asynq_server"
path = "src/lib.rs"

[[bin]]
name = "asynq-server"
path = "src/main.rs"

[dependencies]
# Core asynq library (Redis is always included as the default backend)
asynq = { path = "../asynq" }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# UI - Dioxus SSR rendering (optional, enabled with "ui" feature)
dioxus = { version = "0.7", features = ["ssr"], optional = true }
dioxus-ssr = { version = "0.6", optional = true }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros", "signal", "rt-multi-thread", "sync", "time"] }

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"], default-features = false }

[features]
default = []
# Enable Redis cluster and sentinel support
cluster = ["asynq/cluster"]
sentinel = ["asynq/sentinel"]
# Enable PostgresSQL backend support (in addition to Redis)
postgres = ["asynq/postgres"]
# Enable Web UI dashboard (Dioxus SSR)
ui = ["dioxus", "dioxus-ssr"]

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "websocket_server"
path = "examples/websocket_server.rs"
